@@ -427,9 +427,6 @@ if "%KARAF_PROFILER%" == "" goto :RUN
     if "%IS_RUNNABLE%" == "true" (
         "%JAVA%" %JAVA_OPTS% %OPTS% ^
         --add-reads=java.xml=java.logging ^
-        --add-exports=java.base/org.apache.karaf.specs.locator=java.xml,ALL-UNNAMED ^
-        --patch-module java.base="%KARAF_HOME%\lib\endorsed\org.apache.karaf.specs.locator-@@project.version@@.jar" ^
-        --patch-module java.xml="%KARAF_HOME%\lib\endorsed\org.apache.karaf.specs.java.xml-@@project.version@@.jar" ^
         --add-opens java.base/java.security=ALL-UNNAMED ^
         --add-opens java.base/java.net=ALL-UNNAMED ^
         --add-opens java.base/java.lang=ALL-UNNAMED ^
